<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnquiryActivity">




    <androidx.cardview.widget.CardView
        android:id="@+id/quesCard"

        app:cardElevation="10dp"

        app:cardCornerRadius="10dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="CONTACT US"

                android:layout_marginTop="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            </TextView>

         <RelativeLayout
             android:id="@+id/adressLayout"
             app:layout_constraintTop_toBottomOf="@id/contactTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="30dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">

             <TextView
                 android:id="@+id/addressTitle"
                 android:padding="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="Address">

             </TextView>

             <TextView
                 android:padding="10dp"
                 android:textSize="18sp"
                 android:layout_below="@+id/addressTitle"
                 android:layout_alignLeft="@+id/addressTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/address_line">

             </TextView>


         </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phoneLayout"
                app:layout_constraintTop_toBottomOf="@id/adressLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phoneTitle"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Phone">

                </TextView>

                <TextView

                    android:id="@+id/phone1"
                    android:textSize="20sp"
                    android:text="@string/phone_no1"
                    android:padding="10dp"
                    android:layout_below="@+id/phoneTitle"
                    android:layout_alignLeft="@+id/phoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </TextView>

                <Button

                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/phone1"
                    android:layout_toRightOf="@id/phone1"
                    android:background="@drawable/mobileiconf"
                    android:shadowColor="#00FF0000"></Button>


                <TextView

                    android:id="@+id/phone2"
                    android:textSize="20sp"
                    android:text="@string/phone_no2"
                    android:padding="10dp"
                    android:layout_below="@+id/phone1"
                    android:layout_alignLeft="@+id/phoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </TextView>

                <Button

                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@id/phone2"
                    android:layout_alignBottom="@id/phone2"
                    android:layout_toRightOf="@id/phone2"
                    android:background="@drawable/mobileiconf"
                    android:shadowColor="#00FF0000"></Button>

            </RelativeLayout>




            <RelativeLayout
                android:id="@+id/emailLayout"
                app:layout_constraintTop_toBottomOf="@id/phoneLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/footContact"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/emailTitle"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Email">

                </TextView>

                <TextView
                    android:id="@+id/email1"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/emailTitle"
                    android:layout_alignLeft="@+id/emailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_no1">

                </TextView>

                <TextView
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/email1"
                    android:layout_alignLeft="@+id/email1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_no2">

                </TextView>


            </RelativeLayout>

            <TextView
                android:id="@+id/footContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="60dp"

                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="Travelasha from\nDesigns 4 Trips India LLP"
                android:gravity="center_horizontal">


            </TextView>




        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>




</ScrollView>